# ttymidi

./: .bzrignore  .gitignore  Makefile  README  README.md  build.sh  meson.build  ttymidi.c  ttymidi.code-workspace
arduino/: README
arduino/ardumidi/: ardumidi.cpp  ardumidi.h
arduino/ardumidi/examples/from_alsa_to_arduino/: from_alsa_to_arduino.pde
html/: index.html  main.css
inc/: term_posix.h  termios2.h
src/: term_posix.c  termios2.c  ttymidi-old.c  ttymidi.c
